--- a/QRSdetection.ipynb
+++ b/QRSdetection.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/NicolasNgo/QRSDetection/blob/main/QRSdetection.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -943,7 +953,8 @@
       "collapsed_sections": [
         "cjoYduw2ImB2"
       ],
-      "toc_visible": true
+      "authorship_tag": "ABX9TyP0sPBAdXSOpo1Z/ldvUi7e",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
